# codeowners-lsp

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  EXTENSION_UPDATE.md  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  sync-upstream.yml
benches/: diagnostics.rs  file_cache.rs  lsp_handlers.rs  parsing.rs  pattern_matching.rs  testdata.rs
scripts/: bench-summary.sh
src/: blame.rs  cli.rs  diagnostics.rs  file_cache.rs  github.rs  lib.rs  lookup.rs  main.rs  ownership.rs  parser.rs  pattern.rs  settings.rs  validation.rs
src/commands/: check.rs  config.rs  coverage.rs  fix.rs  fmt.rs  gha.rs  lint.rs  mod.rs  optimize.rs  suggest.rs  tree.rs  validate_owners.rs
src/handlers/: lens.rs  linked.rs  mod.rs  navigation.rs  selection.rs  semantic.rs  signature.rs  symbols.rs  util.rs
