[package]
name = "codeowners-lsp"
version = "0.2.2"
edition = "2021"
description = "Language server providing CODEOWNERS information via hover and inlay hints"
repository = "https://github.com/radiosilence/codeowners-lsp"
license = "MIT"
keywords = ["codeowners", "language-server", "lsp"]
categories = ["development-tools"]

[[bin]]
name = "codeowners-lsp"
path = "src/main.rs"

[[bin]]
name = "codeowners-cli"
path = "src/cli.rs"

[dependencies]
codeowners = "0.1"
glob = "0.3"
ignore = "0.4"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"

[dev-dependencies]
tempfile = "3"
