[package]
name = "codeowners-lsp"
version = "0.11.0"
edition = "2021"
description = "Language server providing CODEOWNERS information via hover and inlay hints"
repository = "https://github.com/radiosilence/codeowners-lsp"
license = "MIT"
keywords = ["codeowners", "language-server", "lsp"]
categories = ["development-tools"]

[[bin]]
name = "codeowners-lsp"
path = "src/main.rs"

[[bin]]
name = "codeowners-cli"
path = "src/cli.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
codeowners = "0.1"
colored = "2"
fast-glob = "1.0"
futures = "0.3"
glob = "0.3"
indicatif = "0.17"
once_cell = "1"
rayon = "1.10"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-lsp = "0.20"

[dev-dependencies]
tempfile = "3"
